# AuraQA-Self-Healing-Test-Automation-Engine

./: FINAL_VALIDATION_REPORT.md  README.md  full_prompt.txt  mypy.ini  pyproject.toml  requirements.txt  summaries.md
backend/: __init__.py  main.py
backend/config/: __init__.py  env_schema.py  settings.py
backend/graph/: __init__.py  graph.py  state.py
backend/graph/edges/: __init__.py  routing.py
backend/graph/nodes/: __init__.py  analyze_dom.py  escalate.py  generate_selector.py  provision_test_data.py  rerun_test.py  validate_selector.py
backend/graph/tools/: __init__.py  dom_parser.py  jira_client.py  selector_scorer.py  tdo_client.py
backend/models/: __init__.py  schemas.py
backend/services/: __init__.py  audit_service.py  healing_service.py
backend/tests/: __init__.py  conftest.py  test_dom_parser.py  test_graph.py  test_schemas.py  test_selector_scorer.py
contracts/: audit_log.json  failure_payload.json  healed_response.json
infrastructure/: .env.example  Dockerfile  Dockerfile.mockapp  docker-compose.yml  nginx.conf
mock_app/: index.html  package-lock.json  package.json  tailwind.config.js
mock_app/src/: App.jsx  index.css
mock_app/src/components/: Dashboard.jsx  LoginForm.jsx  MutationPanel.jsx  Navigation.jsx  UserTable.jsx
mock_app/src/mutations/: mutationEngine.js  scenarios.js
scripts/: deploy_uipath.sh  run_e2e.sh  setup.sh  test_e2e_demo.sh
uipath/: project.json
uipath/integration/: jira_connector.json  tdo_connector.json
uipath/workflows/: ApplyHealedSelector.xaml  DetectFailure.xaml  InvokeHealingAgent.xaml  LogToJira.xaml  Main.xaml  ProvisionTestData.xaml  RunTest.xaml
