### pyproject.toml
# ──────────────────────────────────────────────────────────────
# AuraQA — Python Project Configuration
# ──────────────────────────────────────────────────────────────

[project]
name = "auraqa"
version = "1.0.0"
description = "Self-Healing Enterprise Test Automation Engine"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "AuraQA Team" },
]
keywords = ["test-automation", "self-healing", "uipath", "langgraph"]

dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
    "pydantic==2.7.4",
    "pydantic-settings==2.3.4",
    "langgraph==0.2.0",
    "langchain-core==0.2.0",
    "beautifulsoup4==4.12.3",
    "lxml==5.2.2",
    "httpx==0.27.0",
    "python-dotenv==1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.2",
    "pytest-asyncio==0.23.7",
    "pytest-cov==5.0.0",
    "pylint>=3.0",
    "mypy>=1.10",
]

# ──────────────────────────────────────────────────────────────
# pytest
# ──────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["backend/tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "-q",
    "--cov=backend",
    "--cov-report=term-missing",
    "--cov-report=html:reports/coverage",
    "--cov-fail-under=70",
]
markers = [
    "unit: Unit tests (fast, no I/O)",
    "integration: Integration tests (may require services)",
    "e2e: End-to-end tests (requires full stack)",
    "slow: Tests that take more than 5 seconds",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

# ──────────────────────────────────────────────────────────────
# mypy
# ──────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
show_column_numbers = true
pretty = true
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "langgraph.*",
    "langchain_core.*",
    "bs4.*",
    "lxml.*",
]
ignore_missing_imports = true

# ──────────────────────────────────────────────────────────────
# pylint
# ──────────────────────────────────────────────────────────────
[tool.pylint.main]
load-plugins = [
    "pylint.extensions.docparams",
]
jobs = 0
py-version = "3.10"

[tool.pylint."messages control"]
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring (Pydantic models self-document)
    "R0903",  # too-few-public-methods (Pydantic models)
    "R0801",  # duplicate-code
    "W0511",  # fixme / TODO
    "C0209",  # consider-using-f-string
    "E0611",  # no-name-in-module (pydantic re-exports)
    "R0913",  # too-many-arguments
]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.design]
max-args = 10
max-locals = 20
max-returns = 8

[tool.pylint.similarities]
min-similarity-lines = 6

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"
